--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -49,10 +49,10 @@
       class="reset-score-button"
       >Reset Score</button>
 
-      <button class="auto-play-button"
-      onclick="
-      autoplay();
-      ">Auto Play</button>
+      <button class="autoplay-button"
+        onclick="
+        autoplay();
+        ">Auto Play</button>
     </div>
 
     
