--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>10-rock-paper-scissors</title>
+    <title>rock-paper-scissors</title>
     <link rel="stylesheet" href="styles/rock-paper-scissors.css">
   </head>
   <body>
