--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -9,25 +9,19 @@
     </div>
 
     <div>
-      <button onclick="
-      playGame('rock');
-      "
-      class="move-button">
+      <button
+      class="move-button js-rock-button">
       <img src="images/rock-emoji.png"
       class="move-icon">
       </button>
 
-      <button onclick="
-        playGame('paper');
-      "
-      class="move-button"
+      <button 
+      class="move-button js-paper-button"
       ><img src="images/paper-emoji.png"
       class="move-icon"></button>
 
-      <button onclick="
-        playGame('scissors');
-      "
-      class="move-button"
+      <button
+      class="move-button js-scissors-button"
       ><img src="images/scissors-emoji.png"
       class="move-icon"></button>
       </div>
@@ -39,23 +33,15 @@
     </div>
 
     <div>
-      <button onclick="
-      score.wins = 0,
-      score.losses = 0;
-      score.ties = 0;
-      localStorage.removeItem('score');
-      updateScoreElement();
-      "
-      class="reset-score-button"
-      >Reset Score</button>
+      <button
+      class="reset-score-button js-reset-score-button">
+      Reset Score</button>
 
-      <button class="autoplay-button"
-        onclick="
-        autoplay();
-        ">Auto Play</button>
+      <button class="autoplay-button js-auto-play-button">
+      Auto Play</button>
     </div>
 
-    
+    <p class="js-confirmation"></p>
 
     <script src="scripts/rock-paper-scissors.js"></script>
 
